feat(students): implement domain models and repositories for student aggregates
- Add StudentPersonalData aggregate with validation and domain logic
- Add StudentHealthRecord aggregate for medical info and emergency contacts
- Add StudentEnrollment aggregate for academic enrollment tracking
- Add StudentRecord aggregate for annual digital record management
- Include related Value Objects: Address, RecordNumber, etc.
- Add domain repositories for each aggregate
- Update database schema to reflect new aggregate structure
- Refactor old monolithic 'students' table into separate aggregates

This introduces the core domain for student management aligned with DDD principles.